# FPGASoundSynth

./: .gitignore  CMakeLists.txt  README.md  build.bat  compile.bat
docs/: index.html  styles.css  synth.js
src/: main.cpp
src/core/: envelope.hpp  filter.hpp  lfo.hpp  oscillator.hpp  presets.hpp  types.hpp  voice.hpp
src/effects/: chorus.hpp  delay.hpp  reverb.hpp
src/engine/: synth_engine.hpp
website/: synth.js
